# MC_Dissector

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-zh_CN.MD  README.MD  check_version.c  je_protocol.c  je_protocol.h  mc_dissector.c  mc_dissector.h  protocol_data.c  protocol_data.gen.py  protocol_data.h  resources_gen.py  string_gen.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  missing_strings.yml
.github/workflows/: ci.yml
codegen_script/: entity_id_gen.py  protocol_data_gen.py  resources_gen.py  string_gen.py
encryption-helper/: build.gradle
encryption-helper/bedrock/: xmake.lua
encryption-helper/bedrock-ll/: tooth.json  xmake.lua
encryption-helper/bedrock-ll/src/: EncryptionHelper.cpp  EncryptionHelper.h  MemoryOperators.cpp
encryption-helper/bedrock/src/: dllmain.cpp
encryption-helper/java/: build.gradle  settings.gradle
encryption-helper/java/src/main/java/io/github/nickid2018/crypt/: KeyLogFileManager.java  TransformProvider.java  TransformProviders.java
encryption-helper/src/main/java/io/github/nickid2018/crypt/: AgentBasedInjector.java  ProgramInjector.java
protocol/: protocol_data.c  protocol_data.h
protocol/new_schema/: schema.c  schema.h
protocol/schema/: functions.c  functions.h  protocol_functions.c  protocol_functions.h  protocol_schema.c  protocol_schema.h  protocols.c  protocols.h  schema.c  schema.h
protocol/storage/: storage.c  storage.h
protocol_be/: be_dissect.c  be_dissect.h  be_protocol.c  be_protocol.h  be_registers.c
protocol_je/: je_dissect.c  je_dissect.h  je_protocol.c  je_protocol.h  je_protocol_constants.c  je_protocol_constants.h  je_registers.c
protocols/: data_recorder.c  data_recorder.h  protocol_functions.c  protocol_functions.h  protocol_schema.c  protocol_schema.h  protocols.c  protocols.h
resources/: entity_event.txt  entity_inherit_tree.txt  level_event.txt  sync_entity_data.txt
strings/: README.MD  strings_je.json
utils/: data_recorder.c  data_recorder.h  easy_expr.c  easy_expr.h  endian.h  nbt.c  nbt.h  nbt_be.c  nbt_je.c
